phone.css
/* Mobile fix for sticky navbar overlap */
:root {
  --navbar-height: 120px;
}

body {
  padding-top: var(--navbar-height);
}


/* Navigation */
#navbar {
  flex-direction: column;
  padding: 6px 0;
}

#logo img {
  height: 45px;
}

#navbar ul {
  flex-wrap: wrap;
  justify-content: center;
}

#navbar ul li a {
  padding: 6px 10px;
  font-size: 14px;
}

/*Home Section*/
#home {
  min-height: 370px;
  padding: 20px;
}
#home p {
  font-size: 13px;
}

/*services Section*/
#services {
  flex-direction: column;
}
#services .box {
  padding: 14px;
  margin: 2px 0px;
  margin-bottom: 20px;
}

/*Client Section*/
#clients {
  flex-wrap: wrap;
}
#clients img {
  width: 66px;
  padding: 2px 6px;
  height: auto;
}

/*Contact Us Section*/
#contact-box form {
  width: 80%;
}

/*Utility Classes*/
.h-primary {
  font-size: 26px;
}
.btn {
  font-size: 13px;
  padding: 4px 8px;
}

